--- a/viewdata/package.json
+++ b/viewdata/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "canvasjs-react-charts": "^1.0.5",
+    "chart.js": "^4.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.9.3",
